refund-data-service/kubernetes/refund_data_service_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "refund-data-service"
    integration: "refund"
  name: "refund-data-service-service"
  namespace: "default"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 8280
    name: http              
  selector:
    app: "refund-data-service"
